--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset=UTF-8>
 	<title>ma page</title>
 </head>
-<body style="background-color:orange">
+<body style="background-color:purple">
 hello my friend
 </body>
 </html>
