--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
 	<meta charset=UTF-8>
 	<title>ma page</title>
+	<style>
+	h1{
+	color:red;
+	}
+	</style>
 </head>
 <body style="background-color:skyblue">
-hello my friend
+<h1>hello my friend</h1>
 </body>
 </html>
